--- a/asset/poeme.html
+++ b/asset/poeme.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="./js/global.js" defer></script>
 </head>
 
@@ -28,11 +28,11 @@
                     <ul class="grid portefolio-filters list-unstyled">
                         <div class="container c-flex">
                             <li class="grid__item">
-                                <a href="index.html">Accueil</a>
+                                <a href="/index.html">Accueil</a>
                             </li>
 
                             <div class="haut">
-                                <a href="#"> <img src="./img/fleche monte.png" alt=""> </a>
+                                <a href="#"> <img src="/img/fleche monte.png" alt=""> </a>
                             </div>
 
 
@@ -44,7 +44,7 @@
 
                 <div class="d-grid">
                     <div class="d-grid__item article__card">
-                        <img src="./img/A des oiseaux1.png" alt="" loading="lazy" class="card__image">
+                        <img src="/img/A des oiseaux1.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">A des oiseaux envolés</h3>
                         <p class="category">Illustration réalisée avec les logiciels Inskape et photoflitre. Dessin
                             original, travaillé d'abord au crayon puis scanné, vectorisé et travaillé en couleur par la
@@ -54,7 +54,7 @@
 
 
                     <div class="d-grid__item article__card">
-                        <img src="./img/l'incantation du loup 1.png" alt="" loading="lazy" class="card__image">
+                        <img src="/img/l'incantation du loup 1.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">L'incantation du Loup</h3>
                         <p class="category">Illustration réalisée avec les logiciels Inskape et photoflitre. Dessin
                             original, travaillé d'abord au crayon puis scanné, vectorisé et travaillé en couleur par la
@@ -64,7 +64,7 @@
 
 
                     <div class="d-grid__item article__card">
-                        <img src="./img/le petit chien.png" alt="" loading="lazy" class="card__image">
+                        <img src="/img/le petit chien.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Le petit Chien</h3>
                         <p class="category">Illustration réalisée avec les logiciels Inskape et photoflitre. Dessin
                             original, travaillé d'abord au crayon puis scanné, vectorisé et travaillé en couleur par la
@@ -75,7 +75,7 @@
 
 
                     <div class="d-grid__item article__card">
-                        <img src="./img/Pangolin.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="/img/Pangolin.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Chaque matin le Pangolin</h3>
                         <p class="category">Illustration réalisée avec les logiciels Inskape et photoflitre. Dessin
                             original, travaillé d'abord au crayon puis scanné, vectorisé et travaillé en couleur par la
@@ -85,7 +85,7 @@
 
 
                     <div class="d-grid__item article__card">
-                        <img src="./img/panthére 1.png" alt="" loading="lazy" class="card__image">
+                        <img src="/img/panthére 1.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Le lit de la Panthére d'Amour</h3>
                         <p class="category">Illustration réalisée avec les logiciels Inskape et photoflitre. Dessin
                             original, travaillé d'abord au crayon puis scanné, vectorisé et travaillé en couleur par la
@@ -94,7 +94,7 @@
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="./img/sanglier 1.png" alt="" loading="lazy" class="card__image">
+                        <img src="/img/sanglier 1.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Le vieux Sanglier</h3>
                         <p class="category">Illustration réalisée avec les logiciels Inskape et photoflitre. Dessin
                             original, travaillé d'abord au crayon puis scanné, vectorisé et travaillé en couleur par la
