--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="./js/global.js" defer></script>
 </head>
 
@@ -359,11 +359,11 @@ footer-->
         <div class="grid">
             <div class="grid__item">
                 <div class="card">
-                    <img src="./img/westie.jpg" alt="" loading="lazy" class="card__image">
+                    <img src="./img/westie - titre.jpg" alt="" loading="lazy" class="card__image">
                     <div class="card__inner">
                         <br> <br> <br> <br> <br> <br>
                         <h3 class="card__title">Illustrations poémes</h3>
-                        <p class="cliquez"> <a href="poeme.html" target="_blanck">Cliquez moi</a> </p>
+                        <p class="cliquez"> <a href="./asset/poeme.html" target="_blanck">Cliquez moi</a> </p>
                     </div>
                     <div class="card__overlay">
                         <a href="#">+</a>
@@ -372,10 +372,10 @@ footer-->
             </div>
             <div class="grid__item">
                 <div class="card">
-                    <img src="./img/logo puppy deux.png" alt="" loading="lazy" class="card__image">
+                    <img src="./img/puppy titre.jpg" alt="" loading="lazy" class="card__image">
                     <div class="card__inner"> <br> <br>
                         <h3 class="card__title">Puppy Grooming</a></h3>
-                        <p class="cliquez"><a href="puppy.html" target="_blanck">Cliquez moi</a></p>
+                        <p class="cliquez"><a href="./asset/puppy.html" target="_blanck">Cliquez moi</a></p>
                     </div>
                     <div class="card__overlay">
                         <a href="#">+</a>
@@ -384,10 +384,10 @@ footer-->
             </div>
             <div class="grid__item">
                 <div class="card">
-                    <img src="./img/affiche.jpg" alt="" loading="lazy" class="card__image">
+                    <img src="./img/asso titre.jpg" alt="" loading="lazy" class="card__image">
                     <div class="card__inner">
                         <h3 class="card__title">Création d'affiches associatives</h3>
-                        <p class="cliquez"><a href="affiche.html" target="_blanck">Cliquez moi</a></p>
+                        <p class="cliquez"><a href="./asset/affiche.html" target="_blanck">Cliquez moi</a></p>
                     </div>
                     <div class="card__overlay">
                         <a href="#">+</a>
@@ -399,7 +399,7 @@ footer-->
                     <img src="./img/logo coffee jpg.jpg" alt="" loading="lazy" class="card__image">
                     <div class="card__inner">
                         <h3 class="card__title">L'escale, Coffee shop</h3>
-                        <p class="cliquez"><a href="escale.html" target="_blanck">Cliquez moi</a></p>
+                        <p class="cliquez"><a href="./asset/escale.html" target="_blanck">Cliquez moi</a></p>
                     </div>
                     <div class="card__overlay">
                         <a href="#">+</a>
@@ -408,10 +408,10 @@ footer-->
             </div>
             <div class="grid__item">
                 <div class="card">
-                    <img src="./img/enliu6.jpg" alt="" loading="lazy" class="card__image">
+                    <img src="./img/titre enlu.jpg" alt="" loading="lazy" class="card__image">
                     <div class="card__inner"> <br>
                         <h3 class="card__title">Enluminures Médiévales</h3>
-                        <p class="cliquez"><a href="med.html" target="_blanck">Cliquez moi</a></p>
+                        <p class="cliquez"><a href="./asset/med.html" target="_blanck">Cliquez moi</a></p>
                     </div>
                     <div class="card__overlay">
                         <a href="#">+</a>
@@ -420,10 +420,10 @@ footer-->
             </div>
             <div class="grid__item">
                 <div class="card">
-                    <img src="./img/cartehermine.png" alt="" loading="lazy" class="card__image">
+                    <img src="./img/hermine titre.png" alt="" loading="lazy" class="card__image">
                     <div class="card__inner"> <br> <br> <br> <br> <br> <br>
                         <h3 class="card__title">Hermine radieuse</h3>
-                        <p class="cliquez"><a href="hermine.html" target="_blanck">Cliquez moi</a></p>
+                        <p class="cliquez"><a href="./asset/hermine.html" target="_blanck">Cliquez moi</a></p>
                     </div>
                     <div class="card__overlay">
                         <a href="#">+</a>
