--- a/asset/escale.html
+++ b/asset/escale.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="./js/global.js" defer></script>
 </head>
 
@@ -28,11 +28,11 @@
                     <ul class="grid portefolio-filters list-unstyled">
                         <div class="container c-flex">
                             <li class="grid__item">
-                                <a href="index.html">Accueil</a>
+                                <a href="/index.html">Accueil</a>
                             </li>
 
                             <div class="haut">
-                                <a href="#"> <img src="./img/fleche monte.png" alt=""> </a>
+                                <a href="#"> <img src="/img/fleche monte.png" alt=""> </a>
                             </div>
 
 
@@ -41,7 +41,7 @@
                     <p>Création d’une identité de marque qui comprend la création d’un logo, d’icônes, de carte des
                         visites et d’une charte graphique. <br>
                         Le client est un coffee Shop nommé "L'escale". <br>
-                        Création d'une structure de site internet sur Figma transférée sur Wordpress/Divi pour
+                        Création d'une structure de site internet ensuite sur Figma transférée sur Wordpress/Divi pour
                         finalisation.
                         Travail sur le responsive, les différents formats ont été travaillés et pensés à part pour
                         ordinateurs,
@@ -55,21 +55,21 @@
 
                 <div class="d-grid">
                     <div class="d-grid__item article__card">
-                        <img src="./img/escalemoodbord.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="/img/escalemoodbord.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Moodboard</h3>
-                        <p class="category">Moodboard de recherche, couleur, ambiance, typo et graphisme. Le client
+                        <p class="category">Moodboard de recherche, couleur, ambiance, typo, graphisme. Le client
                             souhaitait un style chaleureux, convivial et moderne.
                         </p>
                     </div>
                     <div class="d-grid__item article__card">
-                        <img src="./img/logo coffee jpg.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="/img/logo coffee jpg.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Logo</h3>
                         <p class="category">Présentation du logo, avec des couleurs tournant autour du café.
-                            Utilisation de différentes déclinaisons de brun, d'ocre et d'orange/terre de sienne.
+                            Utilisation de différentes déclinaisons de brun, ocre et d'orange/terre de sienne.
                             Les couleurs ont été choisies pour leur coté chaleureux et authentique.</p>
                     </div>
                     <div class="d-grid__item article__card">
-                        <img src="./img/menu icones.png" alt="" loading="lazy" class="card__image">
+                        <img src="/img/menu icones.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Jeux d'icônes.</h3>
                         <p class="category">Un jeu d'icônes a été réalisé pour mettre en avant les catégories de
                             produits, mise en situation dans le paragraphe "menu" dans coffee Shop.</p>
@@ -77,40 +77,40 @@
 
 
                     <div class="d-grid__item article__card">
-                        <img src="./img/accueil escale.png" alt="" loading="lazy" class="card__image">
+                        <img src="/img/accueil escale.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Visuel du site à partir de Wordpress/divi</h3>
                         <p class="category">Page d'accueil du coffee shop.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="./img/Histoireescale.png" alt="" loading="lazy" class="card__image">
+                        <img src="/img/Histoireescale.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Visuel du site à partir de Wordpress/divi</h3>
                         <p class="category">Page de présentation "notre histoire, nos valeurs" et offres spéciales été.
                         </p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="./img/exemple spécailités2.png" alt="" loading="lazy" class="card__image">
+                        <img src="/img/exemple spécailités2.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Snacking</h3>
                         <p class="category">Partie de la page menu avec la prestation "snacking".</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="./img/produits phrares.png" alt="" loading="lazy" class="card__image">
+                        <img src="/img/produits phrares.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Produits Phares</h3>
                         <p class="category">Présentations de la page produits phares avec travail du placement du logo
                             du coffee shop à partir de Photoshop.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="./img/produits été.png" alt="" loading="lazy" class="card__image">
+                        <img src="/img/produits été.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Produits été</h3>
                         <p class="category">Présentations de la page produits phares avec travail du placement du logo
                             du coffee shop à partir de Photoshop.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="./img/page commande.png" alt="" loading="lazy" class="card__image">
+                        <img src="/img/page commande.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Click & Collect</h3>
                         <p class="category">Visuel de la page commande du click & Collect.</p>
                     </div>
