--- a/hermine.html
+++ b/hermine.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="./js/global.js" defer></script>
 </head>
 
@@ -28,11 +28,11 @@
                     <ul class="grid portefolio-filters list-unstyled">
                         <div class="container c-flex">
                             <li class="grid__item">
-                                <a href="/index.html">Accueil</a>
+                                <a href="index.html">Accueil</a>
                             </li>
 
                             <div class="haut">
-                                <a href="#"> <img src="/img/fleche monte.png" alt=""> </a>
+                                <a href="#"> <img src="./img/fleche monte.png" alt=""> </a>
                             </div>
 
 
@@ -42,25 +42,25 @@
                         Réalisation de documents et panneaux informatifs, de notre carte de visite et refonte graphique
                         de notre site internet : <strong> <a href="https:/www.hermine-radieuse.net/">"Les Conpagnons de
                                 Hermine Radieuse"</a> </strong></p>
-                    <img src="/img/accueilhermine.bmp" alt="" loading="lazy" class="card__image">
+                    <img src="./img/accueilhermine.bmp" alt="" loading="lazy" class="card__image">
                 </div>
 
 
                 <div class="d-grid">
                     <div class="d-grid__item article__card">
-                        <img src="/img/vie1.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/vie1.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Présentation Hermine</h3>
                         <p class="category">Panneau explicatif, présentation de l'association. </p>
                     </div>
                     <div class="d-grid__item article__card">
-                        <img src="/img/vie2.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/vie2.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">La vie commerciale</h3>
                         <p class="category">Panneau explicatif sur la vie commerciale à la fin du moyen âge.</p>
                     </div>
                     <div class="d-grid__item article__card">
-                        <img src="/img/vie.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/vie.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Cadre de vie</h3>
-                        <p class="category">Panneau expliactif sur le cadre de vie à la fin du moyen âge.</p>
+                        <p class="category">Panneau explicatif sur le cadre de vie à la fin du moyen âge.</p>
                     </div>
 
 
