--- a/affiche.html
+++ b/affiche.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="./js/global.js" defer></script>
 </head>
 
@@ -29,11 +29,11 @@
                     <ul class="grid portefolio-filters list-unstyled">
                         <div class="container c-flex">
                             <li class="grid__item">
-                                <a href="/index.html">Accueil</a>
+                                <a href="index.html">Accueil</a>
                             </li>
 
                             <div class="haut">
-                                <a href="#"> <img src="/img/fleche monte.png" alt=""> </a>
+                                <a href="#"> <img src="./img/fleche monte.png" alt=""> </a>
                             </div>
 
 
@@ -49,22 +49,22 @@
 
                 <div class="d-grid">
                     <div class="d-grid__item article__card">
-                        <img src="/img/projet ingé.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/projet ingé.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Projet ingénieur honnête homme.</h3>
                         <p class="category">Affiche réalisée en partenariat avec un groupe d'élèves ingénieurs de
-                            l'école ENIB de Brest, dans le cadre d'un projet d'étude. </p>
+                            l'ENIB de Brest, dans le cadre d'un projet d'étude. </p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/enib2.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/enib2.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Le Pendule.</h3>
                         <p class="category">Affiche réalisée en partenariat avec un groupe d'élèves ingénieurs de
-                            l'école ENIB de Brest, dans le cadre d'un projet d'étude.</p>
+                            l'ENIB de Brest, dans le cadre d'un projet d'étude.</p>
                     </div>
 
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/arc des abers.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/arc des abers.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Concours salle tir à l'arc, Arc des Abers.</h3>
                         <p class="category">Affiche réalisée en partenariat avec le club d'arc des abers de Saint Renan
                             pour leur concours salle en 2023.</p>
@@ -72,31 +72,31 @@
 
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/croix rouge 1a.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/croix rouge 1a.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Collecte de vêtements Croix Rouge Française.</h3>
-                        <p class="category">Affiche réalisée en partenariat avec la Croix Rouge Française de Saint
-                            Renan, dans le cadre de l'ouverture de leur Vesti Boutique
+                        <p class="category">Affiche réalisée en partenariat avec la Croix Rouge Française de
+                            Saint-Renan, dans le cadre de l'ouverture de leur Vesti Boutique
                             située à Ploudalmézeau. L'institution impose une charte graphique qui lui est propre qu'il
                             fallait impérativement respecter. Proposition 1.
                         </p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/croix rouge 1b.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/croix rouge 1b.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Collecte de vêtements Croix Rouge Française.</h3>
                         <p class="category">Collecte de vêtements Croix Rouge Française.</h3>
-                        <p class="category">Affiche réalisée en partenariat avec la Croix Rouge Française de Saint
-                            Renan, dans le cadre de l'ouverture de leur Vesti Boutique
+                        <p class="category">Affiche réalisée en partenariat avec la Croix Rouge Française de
+                            Saint-Renan, dans le cadre de l'ouverture de leur Vesti Boutique
                             située à Ploudalmézeau. L'institution impose une charte graphique qui lui est propre qu'il
                             fallait impérativement respecter. Proposition 2.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/croix rouge 1c.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/croix rouge 1c.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Collecte de vêtements Croix Rouge Française.</h3>
                         <p class="category">Collecte de vêtements Croix Rouge Française.</h3>
-                        <p class="category">Affiche réalisée en partenariat avec la Croix Rouge Française de Saint
-                            Renan, dans le cadre de l'ouverture de leur Vesti Boutique
+                        <p class="category">Affiche réalisée en partenariat avec la Croix Rouge Française de
+                            Saint-Renan, dans le cadre de l'ouverture de leur Vesti Boutique
                             située à Ploudalmézeau. L'institution impose une charte graphique qui lui est propre qu'il
                             fallait impérativement respecter. Proposition 3.</p>
                     </div>
