--- a/med.html
+++ b/med.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="./js/global.js" defer></script>
 </head>
 
@@ -28,11 +28,11 @@
                     <ul class="grid portefolio-filters list-unstyled">
                         <div class="container c-flex">
                             <li class="grid__item">
-                                <a href="/index.html">Accueil</a>
+                                <a href="index.html">Accueil</a>
                             </li>
 
                             <div class="haut">
-                                <a href="#"> <img src="/img/fleche monte.png" alt=""> </a>
+                                <a href="#"> <img src="./img/fleche monte.png" alt=""> </a>
                             </div>
 
 
@@ -43,7 +43,7 @@
                     <h2 class="section-title">Portefolio</h2>
                     <p>Présentation d'enluminures médiévales réalisée au sein de mon association "Les Compagnons de
                         l'Hermine Radieuse". <br>
-                        Travail réalisé à partir de pigment d'origine et de techniques d'époque. <br>
+                        Travail réalisé à partir de pigments d'origine et de techniques d'époque. <br>
                         Il s'agit d'un travail personnel qui à un but éducatif auprès du grand public afin d'expliquer
                         et présenter les techniques
                         d'enluminures et mise en couleurs ayant cours à la fin du moyen âge. </p>
@@ -52,19 +52,19 @@
 
                 <div class="d-grid">
                     <div class="d-grid__item article__card">
-                        <img src="/img/color1.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/color1.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Mise en couleurs de pages imprimées</h3>
                         <p class="category">Utilisation des pigments et liants du moyen âge afin de mettre en couleurs
                             un livre imprimé. </p>
                     </div>
                     <div class="d-grid__item article__card">
-                        <img src="/img/color2.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/color2.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Mise en couleurs de pages imprimées</h3>
                         <p class="category">Utilisation des pigments et liants du moyen âge afin de mettre en couleurs
                             un livre imprimé.</p>
                     </div>
                     <div class="d-grid__item article__card">
-                        <img src="/img/color3.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/color3.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Mise en couleurs de pages imprimées</h3>
                         <p class="category">Utilisation des pigments et liants du moyen âge afin de mettre en couleurs
                             un livre imprimé.</p>
@@ -72,59 +72,59 @@
 
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/boite1.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/boite1.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Illustration et mise en couleurs sur boîte en bois</h3>
                         <p class="category">Utilisation des pigments et liants du moyen âge afin de mettre en couleurs
                             une boîte en bois.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/boire2.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/boire2.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Illustration et mise en couleurs sur boîte en bois</h3>
                         <p class="category">Utilisation des pigments et liants du moyen âge afin de mettre en couleurs
                             une boîte en bois.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/boite3.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/boite3.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Illustration et mise en couleurs sur boîte en bois</h3>
                         <p class="category">Utilisation des pigments et liants du moyen âge afin de mettre en couleurs
                             une boîte en bois.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/enliu1.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/enliu1.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Saint George</h3>
                         <p class="category">Copie d'une enluminure représentant Saint George terrassant le dragon. </p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/enliu2.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/enliu2.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Hermine</h3>
                         <p class="category">Copie d'une enluminure représentant une hermine, symbole de notre
                             association.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/enliu4.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/enliu4.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Dragon</h3>
                         <p class="category">Copie d'une enluminure représentant un dragon, et un cerf qui va mal.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/enliu3.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/enliu3.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Lettrine</h3>
                         <p class="category">Copie d'une lettrine.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/enliu6.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/enliu6.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Lettrine</h3>
                         <p class="category">Copie et extrapolation d'une lettrine dans laquelle je me mets en scène.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/moi.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/moi.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Moi</h3>
                         <p class="category">Au travail, avec mon atelier reconstitué.</p>
                     </div>
