--- a/puppy.html
+++ b/puppy.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="./js/global.js" defer></script>
 </head>
 
@@ -28,22 +28,23 @@
                     <ul class="grid portefolio-filters list-unstyled">
                         <div class="container c-flex">
                             <li class="grid__item">
-                                <a href="/index.html">Accueil</a>
+                                <a href="index.html">Accueil</a>
                             </li>
 
                             <div class="haut">
-                                <a href="#"> <img src="/img/fleche monte.png" alt=""> </a>
+                                <a href="#"> <img src="./img/fleche monte.png" alt=""> </a>
                             </div>
 
 
                     </ul>
                     <h2 class="section-title">Portefolio</h2>
-                    <p>Création d’une identité de marque qui comprend la création d’un logo, d’icônes, de carte des
+                    <p>Création d’une identité de marque qui comprend la création d’un logo, d’icônes, de cartes de
                         visites et d’une charte graphique. <br>
                         Le client est un centre de Toilettage canin nommé "Puppy Grooming". <br>
                         Création d'une structure de site internet sur Figma puis transférée sur Wordpress/Divi pour
                         la finalisation. Travail sur le responsive,
-                        les différents formats ont été travaillés et pensés à part,pour ordinateurs, tablettes et téléphones.
+                        les différents formats ont été travaillés et pensés à part, pour ordinateurs, tablettes et
+                        téléphones.
                         <br>
                         Une page shop a été ajouté grâce à l'extension Woocommerce pour l'achat et vente des produits.
                         <br>
@@ -55,20 +56,20 @@
 
                 <div class="d-grid">
                     <div class="d-grid__item article__card">
-                        <img src="/img/Moodbord3.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/Moodbord3.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Moodboard</h3>
                         <p class="category">Moodboard de recherche, couleur, ambiance, typo, graphisme. Le client
-                            souhaitait un style "Flat design" pour son Logo , avec des couleurs tournant autour des
+                            souhaitait un style "Flat design" pour son Logo, avec des couleurs tournant autour des
                             verts et brun. </p>
                     </div>
                     <div class="d-grid__item article__card">
-                        <img src="/img/Puppy n&b.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/Puppy n&b.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Présentation du Logo en noir & blanc</h3>
                         <p class="category">Logo principal en noir et blanc, travail de préparation effectué en amont à
                             la main et finalisé sur Illustrator.</p>
                     </div>
                     <div class="d-grid__item article__card">
-                        <img src="/img/Puppy couleur.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/Puppy couleur.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Présentation du logo en couleur</h3>
                         <p class="category">Logo secondaire aux couleurs demandées par la cliente, travail de
                             préparation effectué en amont à la main et finalisé sur Illustrator.</p>
@@ -76,7 +77,7 @@
 
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/icones puppy.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/icones puppy.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Jeux d'icônes</h3>
                         <p class="category">Jeux d'icônes version noir et blanc et couleurs pour les différentes
                             prestations offertes, soins des oreilles, des griffes, délestage, bain et toilettage
@@ -84,34 +85,34 @@
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/enseigne puppy.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/enseigne puppy.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Mise en situation</h3>
                         <p class="category">Présentation et mise en situation sur une enseigne du logo à l'aide d'un
                             mockup, travail sur Photoshop.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/carte puppy.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/carte puppy.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Mise situation</h3>
                         <p class="category">Présentation et mise en situation sur une enseigne du logo à l'aide d'un
                             mockup, travail sur Photoshop.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/site1.png" alt="" loading="lazy" class="card__image">
+                        <img src="./img/site1.png" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Visuel du site à partir de Wordpress/divi</h3>
                         <p class="category">Accueil du site, présentation/histoire.</p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/toile.jpg" loading="lazy" class="card__image">
+                        <img src="./img/toile.jpg" loading="lazy" class="card__image">
                         <h3 class="card__title">Visuel du site à partir de Wordpress/divi</h3>
                         <p class="category">Les différents services de toilettage proposés par le site avec leurs jeux
                             d'icônes et un lien avec le réseau social Instagram a été intégré. </p>
                     </div>
 
                     <div class="d-grid__item article__card">
-                        <img src="/img/fin site.jpg" alt="" loading="lazy" class="card__image">
+                        <img src="./img/fin site.jpg" alt="" loading="lazy" class="card__image">
                         <h3 class="card__title">Visuel du site à partir de Wordpress/divi</h3>
                         <p class="category">Fin du site avec son espace vente, ses avis clients et son formulaire de
                             contact.</p>
